# Busy-Beaver

./: .gitignore  BusyBeaver.sln  BusyBeaver.vcxproj  BusyBeaver.vcxproj.filters  CMakeLists.txt  ReadMe.md
Busy Beaver/: main.cpp
Busy Beaver.xcodeproj/: project.pbxproj
Busy Beaver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Busy Beaver.xcodeproj/xcuserdata/Adam.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Busy Beaver.xcodeproj/xcuserdata/Adam.xcuserdatad/xcschemes/: Busy Beaver: Debug.xcscheme  Busy Beaver: Release.xcscheme  xcschememanagement.plist
src/: Config.h  main.cpp
src/Model/: BusyBeaverProgram.cpp  BusyBeaverProgram.hpp  FiveStateBusyBeaver.cpp  FiveStateBusyBeaver.hpp  FourStateBusyBeaver.cpp  FourStateBusyBeaver.hpp  Instruction.cpp  Instruction.hpp  TuringMachine.cpp  TuringMachine.hpp  TwoStateBusyBeaver.cpp  TwoStateBusyBeaver.hpp
src/Util/: Timer.hpp  Util.cpp  Util.h
